Changed MIDL compiler target as x64 platform for all x64 configurations; Changed WIN32 macro to WIN64
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@6523 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/vc7_1/7ZipBuilder.vcproj
+++ b/vc7_1/7ZipBuilder.vcproj
@@ -172,7 +172,7 @@
 				FavorSizeOrSpeed="1"
 				OmitFramePointers="TRUE"
 				AdditionalIncludeDirectories="$(IntDir)"
-				PreprocessorDefinitions="WIN32;_WINDOWS;NDEBUG;_USRDLL"
+				PreprocessorDefinitions="WIN64;_WINDOWS;NDEBUG;_USRDLL"
 				StringPooling="TRUE"
 				ExceptionHandling="FALSE"
 				RuntimeLibrary="0"
@@ -203,6 +203,7 @@
 				Name="VCMIDLTool"
 				PreprocessorDefinitions="NDEBUG"
 				AdditionalIncludeDirectories="..\shareaza"
+				TargetEnvironment="2"
 				HeaderFileName="$(IntDir)\$(InputName).h"
 				DLLDataFileName=""
 				InterfaceIdentifierFileName="$(IntDir)\$(InputName)_i.c"
@@ -241,7 +242,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="0"
 				AdditionalIncludeDirectories="$(IntDir)"
-				PreprocessorDefinitions="WIN32;_WINDOWS;_DEBUG;_USRDLL"
+				PreprocessorDefinitions="WIN64;_WINDOWS;_DEBUG;_USRDLL"
 				ExceptionHandling="FALSE"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="1"
@@ -271,6 +272,7 @@
 				Name="VCMIDLTool"
 				PreprocessorDefinitions="_DEBUG"
 				AdditionalIncludeDirectories="..\shareaza"
+				TargetEnvironment="2"
 				HeaderFileName="$(IntDir)\$(InputName).h"
 				DLLDataFileName=""
 				InterfaceIdentifierFileName="$(IntDir)\$(InputName)_i.c"
