--- a/vc7_1/ZIPBuilder.vcproj
+++ b/vc7_1/ZIPBuilder.vcproj
@@ -176,7 +176,7 @@
 				FavorSizeOrSpeed="1"
 				OmitFramePointers="TRUE"
 				AdditionalIncludeDirectories="$(IntDir);..\shareaza\zlib"
-				PreprocessorDefinitions="WIN32;_WINDOWS;NDEBUG;_USRDLL"
+				PreprocessorDefinitions="WIN64;_WINDOWS;NDEBUG;_USRDLL"
 				StringPooling="TRUE"
 				ExceptionHandling="FALSE"
 				RuntimeLibrary="0"
@@ -209,6 +209,7 @@
 				Name="VCMIDLTool"
 				PreprocessorDefinitions="NDEBUG"
 				AdditionalIncludeDirectories="..\shareaza"
+				TargetEnvironment="2"
 				HeaderFileName="$(IntDir)$(InputName).h"
 				DLLDataFileName=""
 				InterfaceIdentifierFileName="$(IntDir)$(InputName)_i.c"
@@ -247,7 +248,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="0"
 				AdditionalIncludeDirectories="$(IntDir);..\shareaza\zlib"
-				PreprocessorDefinitions="WIN32;_WINDOWS;_DEBUG;_USRDLL"
+				PreprocessorDefinitions="WIN64;_WINDOWS;_DEBUG;_USRDLL"
 				ExceptionHandling="FALSE"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="1"
@@ -279,6 +280,7 @@
 				Name="VCMIDLTool"
 				PreprocessorDefinitions="_DEBUG"
 				AdditionalIncludeDirectories="..\shareaza"
+				TargetEnvironment="2"
 				HeaderFileName="$(IntDir)$(InputName).h"
 				DLLDataFileName=""
 				InterfaceIdentifierFileName="$(IntDir)$(InputName)_i.c"
