Update Generated files for 7Zip, RAR & ZIP Builder projects
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@6529 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/vc7_1/7ZipBuilder.vcproj
+++ b/vc7_1/7ZipBuilder.vcproj
@@ -412,12 +412,18 @@
 		<Filter
 			Name="Generated Files">
 			<File
-				RelativePath="..\plugins\7ZipBuilder\7ZipBuilder_i.c">
+				RelativePath=".\ReleaseWin32\plugins\7ZipBuilder\7ZipBuilder_i.c">
 				<FileConfiguration
-					Name="DebugWin32|Win32">
+					Name="DebugWin32|Win32"
+					ExcludedFromBuild="true">
 					<Tool
-						Name="VCCLCompilerTool"
-						UsePrecompiledHeader="0"/>
+						Name="VCCLCompilerTool"/>
+				</FileConfiguration>
+				<FileConfiguration
+					Name="Debugx64|Win32"
+					ExcludedFromBuild="true">
+					<Tool
+						Name="VCCLCompilerTool"/>
 				</FileConfiguration>
 				<FileConfiguration
 					Name="ReleaseWin32|Win32">
@@ -426,13 +432,86 @@
 						UsePrecompiledHeader="0"/>
 				</FileConfiguration>
 				<FileConfiguration
-					Name="Releasex64|Win32">
+					Name="Releasex64|Win32"
+					ExcludedFromBuild="true">
+					<Tool
+						Name="VCCLCompilerTool"/>
+				</FileConfiguration>
+			</File>
+			<File
+				RelativePath=".\DebugWin32\plugins\7ZipBuilder\7ZipBuilder_i.c">
+				<FileConfiguration
+					Name="DebugWin32|Win32">
 					<Tool
 						Name="VCCLCompilerTool"
 						UsePrecompiledHeader="0"/>
 				</FileConfiguration>
 				<FileConfiguration
+					Name="Debugx64|Win32"
+					ExcludedFromBuild="true">
+					<Tool
+						Name="VCCLCompilerTool"/>
+				</FileConfiguration>
+				<FileConfiguration
+					Name="ReleaseWin32|Win32">
+					<Tool
+						Name="VCCLCompilerTool"/>
+				</FileConfiguration>
+				<FileConfiguration
+					Name="Releasex64|Win32"
+					ExcludedFromBuild="true">
+					<Tool
+						Name="VCCLCompilerTool"/>
+				</FileConfiguration>
+			</File>
+			<File
+				RelativePath=".\Debugx64\plugins\7ZipBuilder\7ZipBuilder_i.c">
+				<FileConfiguration
+					Name="DebugWin32|Win32"
+					ExcludedFromBuild="true">
+					<Tool
+						Name="VCCLCompilerTool"/>
+				</FileConfiguration>
+				<FileConfiguration
 					Name="Debugx64|Win32">
+					<Tool
+						Name="VCCLCompilerTool"
+						UsePrecompiledHeader="0"/>
+				</FileConfiguration>
+				<FileConfiguration
+					Name="ReleaseWin32|Win32">
+					<Tool
+						Name="VCCLCompilerTool"/>
+				</FileConfiguration>
+				<FileConfiguration
+					Name="Releasex64|Win32"
+					ExcludedFromBuild="true">
+					<Tool
+						Name="VCCLCompilerTool"/>
+				</FileConfiguration>
+			</File>
+			<File
+				RelativePath=".\Releasex64\plugins\7ZipBuilder\7ZipBuilder_i.c">
+				<FileConfiguration
+					Name="DebugWin32|Win32"
+					ExcludedFromBuild="true">
+					<Tool
+						Name="VCCLCompilerTool"/>
+				</FileConfiguration>
+				<FileConfiguration
+					Name="Debugx64|Win32"
+					ExcludedFromBuild="true">
+					<Tool
+						Name="VCCLCompilerTool"/>
+				</FileConfiguration>
+				<FileConfiguration
+					Name="ReleaseWin32|Win32">
+					ExcludedFromBuild="true">
+					<Tool
+						Name="VCCLCompilerTool"/>
+				</FileConfiguration>
+				<FileConfiguration
+					Name="Releasex64|Win32">
 					<Tool
 						Name="VCCLCompilerTool"
 						UsePrecompiledHeader="0"/>
